--- a/sources/ARES/src/pages/camera/camera.scss
+++ b/sources/ARES/src/pages/camera/camera.scss
@@ -1,3 +1,22 @@
 page-camera {
+  .button-md {
+    background-color: #1e82be;
+  }
+  .content-md {
+    color: #eee;
+    background-color: #fbc000;
 
+  }
+  .item-md {
+    color: #eee;
+    background-color: #fbc000;
+
+  }
+  .item-input .label-md, .item-select .label-md, .item-datetime .label-md {
+    color: #eee;
+  }
+  .card-md{
+    background-color: #f08200;
+  }
 }
+
