--- a/sources/ARES/src/pages/satisfaction/satisfaction.scss
+++ b/sources/ARES/src/pages/satisfaction/satisfaction.scss
@@ -1,3 +1,18 @@
 page-satisfaction {
+  .item-md{
+    color: #eee;
+    background-color: #fbc000;
 
+  }
+  .content-md{
+    color: #eee;
+    background-color: #fbc000;
+
+  }
+  .item-input .label-md, .item-select .label-md, .item-datetime .label-md{
+    color: #eee;
+  }
+  .button-md{
+    background-color: #1e82be;
+  }
 }
