--- a/sources/ARES/src/pages/list-master/list-master.scss
+++ b/sources/ARES/src/pages/list-master/list-master.scss
@@ -1,3 +1,15 @@
 page-list-master {
+  .content-md {
+    color: #eee;
+    background-color: #fbc000;
 
+  }
+  .list-md .item-block .item-inner{
+    border-bottom: 1px solid #eee;
+  }
+  .item-md {
+    color: #eee;
+    background-color: #fbc000;
+
+  }
 }
