--- a/sources/ARES/src/app/app.scss
+++ b/sources/ARES/src/app/app.scss
@@ -74,3 +74,6 @@
 .list-md .item-block .item-inner{
   border-bottom: 1px solid #eee;
 }
+page-item-create .profile-image-wrapper .profile-image-placeholder{
+  background-color: #1e82be !important;
+}
