--- a/sources/ARES/src/pages/list-master/list-master.scss
+++ b/sources/ARES/src/pages/list-master/list-master.scss
@@ -12,4 +12,7 @@ page-list-master {
     background-color: #fbc000;
 
   }
+  page-item-create .profile-image-wrapper .profile-image-placeholder{
+    background-color: #1e82be !important;
+  }
 }
