--- a/sources/ARES/src/app/app.scss
+++ b/sources/ARES/src/app/app.scss
@@ -33,6 +33,7 @@
 }
 .scroll-content{
   background-color: #fbc000;
+  color: #1e82be;
 }
 .list-md .item-block .item-inner {
   border-bottom: 1px solid #eee;
